Load LDtk levels and add a simple player object

--- a/data/config/jumpjet.ini
+++ b/data/config/jumpjet.ini
@@ -5,7 +5,7 @@
 Title           = jumpjet
 FullScreen      = false
 Decoration      = false
-Smoothing       = true
+Smoothing       = false
 VSync           = true
 
 [Resource]
@@ -24,8 +24,45 @@ FrustumHeight   = 800
 FrustumFar      = 2
 FrustumNear     = 0
 Position        = (0, 0, -1) ; Objects with -1 <= Z <= 1 will be visible
+GroupList       = Collision # default
+Zoom            = 3
+
+[CameraControl]
+OnCreate        = > Camera.Get MainCamera, Camera.SetParent < ^
 
 [Scene]
-ChildList       = Object
+ChildList       = AllLevels # Player
 
-[Object]
+[Player@Object]
+Position        = @PlayerStart.Position
+ChildList       = CameraControl
+Input           = PlayerInput
+Graphic         = PlayerGraphic
+Body            = PlayerBody
+
+[PlayerGraphic]
+Texture         = Pixel Platformer/Tilemap/characters_packed.png
+TextureOrigin   = (0, 0)
+TextureSize     = (24, 24)
+
+; Our physics body is dynamic so it can move but its rotation stays fixed
+; so that we don't have physics behaviors leading to walking around at an odd
+; angle.
+[PlayerBody]
+Dynamic         = true
+FixedRotation   = true
+PartList        = PlayerFullBodyPart
+
+[PlayerFullBodyPart]
+Type            = sphere
+Solid           = true
+SelfFlags       = dynamic
+CheckMask       = barrier
+Radius          = 10
+Center          = (12, 12)
+
+[PlayerInput]
+KEY_UP          = Up
+KEY_DOWN        = Down
+KEY_LEFT        = Left
+KEY_RIGHT       = Right
