--- a/data/config/jumpjetd.ini
+++ b/data/config/jumpjetd.ini
@@ -10,5 +10,8 @@ Title           = jumpjet (Debug)
 [Render]
 ShowFPS         = true
 
+[Physics]
+;ShowDebug = true
+
 [Resource]
 WatchList       = Config # Texture # Sound
