Load map as orx resource

--- a/data/config/jumpjet.ini
+++ b/data/config/jumpjet.ini
@@ -9,8 +9,9 @@ Smoothing       = false
 VSync           = true
 
 [Resource]
-Texture         = bundle: # bundle:jumpjet.obr # ../data/texture
+Texture         = bundle: # bundle:jumpjet.obr # ../data/texture # ../maps
 Sound           = bundle: # bundle:jumpjet.obr # ../data/sound
+Map             = ../data/maps
 
 [Input]
 KEY_ESCAPE      = Quit
