Move data/maps/ to data/map/

--- a/data/config/jumpjet.ini
+++ b/data/config/jumpjet.ini
@@ -9,9 +9,9 @@ Smoothing       = false
 VSync           = true
 
 [Resource]
-Texture         = bundle: # bundle:jumpjet.obr # ../data/texture # ../maps
+Texture         = bundle: # bundle:jumpjet.obr # ../data/texture # ../map
 Sound           = bundle: # bundle:jumpjet.obr # ../data/sound
-Map             = ../data/maps
+Map             = ../data/map
 
 [Input]
 KEY_ESCAPE      = Quit
