Add basic support for LDtk loads from config
Also make entity callbacks globally scoped to simplify config based
loads.

The direct entity name -> callback mapping is something to revist later.

--- a/data/config/jumpjet.ini
+++ b/data/config/jumpjet.ini
@@ -31,6 +31,9 @@ Zoom            = 3
 [CameraControl]
 OnCreate        = > Camera.Get MainCamera, Camera.SetParent < ^
 
+[World]
+LDtk            = level1.ldtk
+
 [Scene]
 ChildList       = AllLevels # Player
 
