Define some config values to constants

--- a/data/config/jumpjet.ini
+++ b/data/config/jumpjet.ini
@@ -33,6 +33,8 @@ OnCreate        = > Camera.Get MainCamera, Camera.SetParent < ^
 
 [World]
 LDtk            = level1.ldtk
+CollisionLayer  = Collision
+EntityLayer     = Entities
 
 [Scene]
 ChildList       = AllLevels # Player
