Move entity callbacks into their own file

--- a/data/config/jumpjet.ini
+++ b/data/config/jumpjet.ini
@@ -37,7 +37,7 @@ CollisionLayer  = Collision
 EntityLayer     = Entities
 
 [Scene]
-ChildList       = AllLevels # Player
+ChildList       = World # AllLevels # Player
 
 [Player@Object]
 Position        = @PlayerStart.Position
