Specify object name for all levels in config

--- a/data/config/jumpjet.ini
+++ b/data/config/jumpjet.ini
@@ -35,9 +35,10 @@ OnCreate        = > Camera.Get MainCamera, Camera.SetParent < ^
 LDtk            = level1.ldtk
 CollisionLayer  = Collision
 EntityLayer     = Entities
+LevelsObject    = WorldLevels
 
 [Scene]
-ChildList       = World # AllLevels # Player
+ChildList       = World # WorldLevels # Player
 
 [Player@Object]
 Position        = @PlayerStart.Position
