Add a few config comments

--- a/data/config/jumpjet.ini
+++ b/data/config/jumpjet.ini
@@ -32,9 +32,13 @@ Zoom            = 3
 OnCreate        = > Camera.Get MainCamera, Camera.SetParent < ^
 
 [World]
+; LDtk source file
 LDtk            = level1.ldtk
+; Name of the layer with tiles defining collisions
 CollisionLayer  = Collision
+; Name of the layer with entities
 EntityLayer     = Entities
+; Name of the object which will contain all of the world's levels as child objects
 LevelsObject    = WorldLevels
 
 [Scene]
